# battery-charge-limiter

./: .gitignore  DEVELOPMENT_LOG.md  README.md  bcl-apply  bcl.py  bcl.service  install.sh  pyproject.toml  uninstall.sh
src/battery_charge_limiter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/battery_limiter/: __init__.py  cli.py  core.py  gui.py
tests/: test_bcl.py
